--- a/sampleFront2/src/main/webapp/login.html
+++ b/sampleFront2/src/main/webapp/login.html
@@ -25,7 +25,7 @@ body{
 }
 .login-wrapper > h2{
     font-size: 24px;
-    color: #9a161f;
+    color: #DCE2F0;
     margin-bottom: 20px;
 }
 #login-form > input{
@@ -36,6 +36,7 @@ body{
     margin-bottom: 16px;
     border-radius: 6px;
     background-color: #F8F8F8;
+    border-color: #DCE2F0;
 }
 #login-form > input::placeholder{
     color: #D2D2D2;
@@ -43,7 +44,7 @@ body{
 #login-form > input[type="button"]{
     color: #fff;
     font-size: 16px;
-    background-color: #9a161f;
+    background-color: #DCE2F0;
     margin-top: 20px;
 }
 
@@ -61,7 +62,8 @@ input[type=checkbox] + label {
     background-image: url('images/checker-off.svg');
 }
 input[type=checkbox]:checked + label {
-    background-image: url('images/checker-on.svg');
+    background-image: url('images/check-square-fill.svg');
+    padding-bottom: 80px;
 }
 input[type=checkbox]:disabled + label {
     background-image: url('images/checker-disabled.svg');
@@ -115,15 +117,20 @@ $("#chk_save_id").click(function () {
             url: "http://localhost:9900/login",
             type: "post",
             data: { id:$("#id").val(), pw:$("#pw").val()},
-            success: function (str) {
-                alert(str);
-                if(str === "로그인에 성공하였습니다!") {
-                	location.href="bbslist.html";
-                }else {
-                	$("#id").val("");
-                	$("#pw").val("");
-                	$("#id").focus();
-                }           
+            success: function (member) {
+            	if(member === ""){ // login 되지 않았을 때
+	            	alert("id나 password를 확인하세요");
+	            	$("#id").val("");
+	            	$("#pw").val("");
+	            	$("#id").focus();	// id 입력창으로 포커스를 맞춘다
+            	}else{
+            		// sessionStorage 에 저장
+            		sessionStorage.setItem("login", JSON.stringify(member));
+            		
+            		alert(member.name + "님 환영합니다!!");
+            		
+            		location.href = "bbslist.html";
+            	}
             },
             error: function () {
                 alert("error");
@@ -134,7 +141,7 @@ $("#chk_save_id").click(function () {
 </script>
 <script type="text/javascript">
 $("#Rbtn").click(function(){
-	location.href = "regi.html";s
+	location.href = "regi.html";
 });
 </script>
 </body>
