--- a/sampleFront2/src/main/webapp/regi.html
+++ b/sampleFront2/src/main/webapp/regi.html
@@ -24,7 +24,7 @@ body{
 }
 .login-wrapper > h2{
     font-size: 24px;
-    color: #9a161f;
+    color: #DCE2F0;
     margin-bottom: 20px;
 }
 #login-form > input{
@@ -35,6 +35,7 @@ body{
     margin-bottom: 16px;
     border-radius: 6px;
     background-color: #F8F8F8;
+    border-color: #DCE2F0;
 }
 #login-form > input::placeholder{
     color: #D2D2D2;
@@ -42,7 +43,7 @@ body{
 #login-form > input[type="button"]{
     color: #fff;
     font-size: 16px;
-    background-color: #9a161f;
+    background-color: #DCE2F0;
     margin-top: 20px;
 }
 
